@@ -1,4 +1,6 @@
 v0.13
+	* FIX : Ugly way to ensure ways with duplicate consecutive node will not be uploaded/exported/saved
+	* ADD : Do not auto-complete "name" tag + make "created_by" read-only
 	* FIX : Selecting elements with Find do not update the menus (closes #1375)
 	* FIX : tag values inputed during session not added to auto-completion (refs #1373)
 	* ADD : "View" - "Show directional Arrows" menu. "Never" obviously never shows the arrows, "Always" obviously always shows them, even for non-roads. "Oneway" is the equivalent of the existing and is the default. (closes #1316)
